--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,11 @@ django-storages==1.13.2
 dnspython==2.4.2
 eventlet==0.33.3
 greenlet==2.0.2
+gunicorn==21.2.0
 jmespath==1.0.1
 kombu==5.3.1
+msvc-runtime==14.34.31931
+packaging==23.1
 prompt-toolkit==3.0.39
 python-dateutil==2.8.2
 python-decouple==3.8
