--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,17 @@
 services:
+  - type: worker
+    name: queue
+    region: singapore
+    env: python
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "celery -A humblebee worker -l info -P eventlet"
+    autoDeploy: false
+    envVars:
+      - key: CELERY_BROKER_URL
+        fromService:
+          name: celery-redis
+          type: redis
+          property: connectionString
   - type: web
     name: humblebee
     region: singapore
